[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/player/player.gd" type="Script" id=1]
[ext_resource path="res://assets/spriteFrames/player.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/sprites/ui/arrow.png" type="Texture" id=3]
[ext_resource path="res://assets/animations/playerInvulnerabilityFrames.tres" type="Animation" id=4]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 0.1, 0.5, 0.1 )

[node name="player" type="KinematicBody" groups=[
"entities",
]]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = false
axis_lock_angular_z = false
collision/safe_margin = 0.001
script = ExtResource( 1 )

[node name="playerAnimations" type="AnimatedSprite3D" parent="." index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
centered = true
offset = Vector2( 0, 0 )
flip_h = false
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 1.0
pixel_size = 0.1
axis = 2
transparent = true
shaded = false
double_sided = true
alpha_cut = 0
frames = ExtResource( 2 )
animation = "walkSide"
_sections_unfolded = [ "Visibility" ]

[node name="playerCamera" type="Camera" parent="." index="1"]

transform = Transform( 1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, 0, 3, 5 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 100.0

[node name="playerPolygon" type="CollisionShape" parent="." index="2"]

shape = SubResource( 1 )
disabled = false

[node name="arrow" type="Sprite3D" parent="." index="3"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0 )
visible = false
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
centered = true
offset = Vector2( 0, 0 )
flip_h = true
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 1.0
pixel_size = 0.1
axis = 2
transparent = true
shaded = false
double_sided = true
alpha_cut = 0
texture = ExtResource( 3 )
vframes = 1
hframes = 1
frame = 0
region_enabled = false
region_rect = Rect2( 0, 0, 0, 0 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="playerAnimator" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/invulnerabilityFrames = ExtResource( 4 )
anims/playerInvulnerabilityFrames = ExtResource( 4 )
blend_times = [  ]

[connection signal="animation_finished" from="playerAnimator" to="." method="_on_playerAnimator_animation_finished"]


